; ModuleID = '/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_utils_var.c_gbt_var_key_from_datum.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_utils_var.c_gbt_var_key_from_datum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.varlena = type { i32 }

@VARHDRSZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.varlena*)* @gbt_var_key_from_datum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @gbt_var_key_from_datum(%struct.varlena* %0) #0 {
  %2 = alloca %struct.varlena*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  store %struct.varlena* %0, %struct.varlena** %2, align 8
  %5 = load %struct.varlena*, %struct.varlena** %2, align 8
  %6 = call i64 @VARSIZE(%struct.varlena* %5)
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @VARHDRSZ, align 8
  %9 = add nsw i64 %7, %8
  %10 = call i64 @palloc(i64 %9)
  %11 = inttoptr i64 %10 to i32*
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @VARDATA(i32* %12)
  %14 = load %struct.varlena*, %struct.varlena** %2, align 8
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @memcpy(i32 %13, %struct.varlena* %14, i64 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i64, i64* %3, align 8
  %19 = load i64, i64* @VARHDRSZ, align 8
  %20 = add nsw i64 %18, %19
  %21 = call i32 @SET_VARSIZE(i32* %17, i64 %20)
  %22 = load i32*, i32** %4, align 8
  ret i32* %22
}

declare dso_local i64 @VARSIZE(%struct.varlena*) #1

declare dso_local i64 @palloc(i64) #1

declare dso_local i32 @memcpy(i32, %struct.varlena*, i64) #1

declare dso_local i32 @VARDATA(i32*) #1

declare dso_local i32 @SET_VARSIZE(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
